update student instance with more operations " ============================================================================ " Netrw Directory Listing                                        (netrw v140) "   /usr/local/Cellar/hadoop/2.7.1 "   Sorted by      name "   Sort sequence: [\/]$,\<core\%(\.\d\+\)\=\>,\.h$,\.c$,\.cpp$,*,\.o$,\.obj$,\.info$,\.swp$,\.bak$,\~$ "   Quick Help: <F1>:help  -:go up dir  D:delete  R:rename  s:sort-by  x:exec " ============================================================================ ../ bin/ libexec/ sbin/ .DS_Store INSTALL_RECEIPT.json LICENSE.txt NOTICE.txt README.txt
